# zipfinder

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: python-publish.yml  scorecard.yml
address-finder/: MANIFEST.in  README.md  pyproject.toml
address-finder/.github/workflows/: build_wheels.yml
address-finder/address_finder/: __init__.py  _init_data.py  _lib_loader.py  _quantize.py  expander.py  parser.py
address-finder/address_finder/_data_raw/: .gitkeep
address-finder/address_finder/_libs/: .gitkeep
address-finder/scripts/: auditwheel_repair.sh  build_dawg.py  build_libpostal.sh  build_package.py  build_windows.ps1  compress_bundle.py  quantize_model.py
address-finder/tests/: test_expander.py  test_parser.py
bd-geocode-offline/: .gitignore  README.md  download_and_build.py  pyproject.toml  setup.py
bd-geocode-offline/.github/workflows/: python-publish.yml
bd-geocode-offline/bd_geocode_offline/: __init__.py  core.py  utils.py
bd-geocode-offline/bd_geocode_offline/data/: __init__.py
bd-geocode-offline/examples/: advanced_usage.py  basic_usage.py  cli_example.py
bd-geocode-offline/scripts/: build_package.py
bd-geocode-offline/tests/: test_core.py  test_data.py  test_performance.py
examples/: basic_usage.py
zip-finder/: CHANGELOG.md  MANIFEST.in  README.md  download_and_build.py  pyproject.toml  setup.py
zip-finder/.github/workflows/: python-publish.yml
zip-finder/examples/: advanced_usage.py  cli_example.py
zip-finder/scripts/: build_package.py  download_data.py
zip-finder/tests/: test_core.py  test_data.py  test_performance.py
zip-finder/zip_finder/: __init__.py  core.py  utils.py
zip-finder/zip_finder/data/: __init__.py  metadata.json
zip_finder/: core.py
zip_finder/data/: __init__.py
